<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="question_text">تهران پایتخت ایران است</string>
    <string name="button_false">نادرست</string>
    <string name="button_true">درست</string>

    <string name="toast_correct">جواب شما صحیح می باشد</string>
    <string name="toast_incorrect">جواب شما غلط می باشد</string>

    <string name="question_australia">استرالیا بزرگ ترین قاره جهان است.</string>
    <string name="question_oceans">اقیانوس آرام بزرگ ترین اقیانوس جهان است.</string>
    <string name="question_mideast">همه کشورهای خاورمیانه عرب زبان هستند.</string>
    <string name="question_africa">مصر در قاره آفریقا قرار دارد.</string>
    <string name="question_americas">کشور آمریکا پرجمعیت ترین کشور دنیا است.</string>
    <string name="question_asia">قاره آسیا در نیم کره جنوبی جهان واقع شده است.</string>

    <string name="button_next">بعدی</string>
    <string name="button_previous">قبلی</string>
    <string name="button_cheat">تقلب</string>
    <string name="warning_text">آیا اطمینان برای تقلب دارید؟</string>
    <string name="button_show_answer">نمایش تقلب</string>
    <string name="toast_judgment">تقلب کار خوبی نیست</string>
</resources>